# AGV

agv_control/: CMakeLists.txt
agv_control/src/: agv_controller.cpp  oodm_node.cpp
control_car/world/parcial_este_sii/: model.config  model.sdf
distance_detector/: CMakeLists.txt  package.xml
distance_detector/src/: distance_calculator.cpp
emergency_brake/src/: eb_node.cpp
gap_following_pkg/src/: follow_the_gap.cpp
launch_pkg/: CMakeLists.txt  package.xml
launch_pkg/launch/: mapping.launch.py  rplidar.launch.py
my_package/: package.xml
pico_test/uart1/: base_motor_uart.py  main_timers.py  pico_comms_a.py  receiver.py  receiver_with_class.py  receiver_with_class_v2.py  sender.py  uart_usb_pass.py
pico_test/uart2/: main.py  pico_comms_b.py
robotcar_pkg_g02/: package.xml  setup.cfg  setup.py
robotcar_pkg_g02/robotcar_pkg_g02/: robotcar_node_v1_g02.py
wall_following_pkg/: CMakeLists.txt
wall_following_pkg/config/: params.yml
wall_following_pkg/src/: control_node.cpp  follow_gap.cpp  wall_following_node.cpp
